--- a/app/src/main/res/layout/fragment_lesson_view.xml
+++ b/app/src/main/res/layout/fragment_lesson_view.xml
@@ -40,10 +40,9 @@
             android:layout_marginBottom="16dp">
 
             <WebView
-                android:id="@+id/videoWebView"
+                android:id="@+id/videoView"
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
-                android:padding="16dp" />
+                android:layout_height="150dp" />
 
         </androidx.cardview.widget.CardView>
 
