--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,3 @@
-
 <resources>
     <dimen name="initial_webview_height">200dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
@@ -10,5 +9,7 @@
     <dimen name="badge_margin_end">8dp</dimen>
     <dimen name="lessons_margin_bottom">16dp</dimen>
     <dimen name="lessons_padding">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="submit_margin_top">8dp</dimen>
 
 </resources>
