--- a/app/src/main/res/layout/fragment_getting_started.xml
+++ b/app/src/main/res/layout/fragment_getting_started.xml
@@ -58,6 +58,14 @@
                 tools:srcCompat="@drawable/_1" />
         </FrameLayout>
 
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="30dp"
+            android:text="Done"
+            android:textSize="12sp" />
+
 
     </LinearLayout>
 </ScrollView>
