--- a/app/src/main/res/layout/fragment_getting_started.xml
+++ b/app/src/main/res/layout/fragment_getting_started.xml
@@ -60,11 +60,11 @@
 
         <Button
             android:id="@+id/button7"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="30dp"
             android:text="Done"
-            android:textSize="12sp" />
+            android:textSize="16sp" />
 
 
     </LinearLayout>
