--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,8 +11,16 @@
     <dimen name="lessons_padding">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="submit_margin_top">8dp</dimen>
-    <dimen name="done_button_width">100dp</dimen>
-    <dimen name="done_button_height">40dp</dimen>
+    <dimen name="done_button_width">150dp</dimen>
+    <dimen name="done_button_height">50dp</dimen>
     <dimen name="button_margin_top">24dp</dimen>
+    <dimen name="progress_width">130dp</dimen>
+    <dimen name="progress_height">130dp</dimen>
+    <dimen name="progressLayoutWidth">0dp</dimen>
+    <dimen name="progressBarScoreWidth">0dp</dimen>
+    <dimen name="margin_vertical">8dp</dimen>
+    <dimen name="progressBarTopMargin">8dp</dimen>
+    <dimen name="margin_top_last_attempted">16dp</dimen>
+    <dimen name="margin_top_progress_bar">16dp</dimen>
 
 </resources>
