--- a/app/src/main/res/layout/fragment_eval.xml
+++ b/app/src/main/res/layout/fragment_eval.xml
@@ -65,7 +65,6 @@
                     android:padding="8dp"
                     android:text="Start Exercise"
                     android:textAllCaps="false"
-                    android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -73,7 +72,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewExerciseDescription"
                     app:layout_constraintVertical_bias="1.0"
-                    app:strokeColor="#0573BB"
+                    app:strokeColor="@color/lb"
                     app:strokeWidth="50dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
@@ -131,7 +130,6 @@
                     android:singleLine="false"
                     android:text="Start Exam"
                     android:textAllCaps="false"
-                    android:textColor="@color/white"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -139,7 +137,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewExamDescription"
                     app:layout_constraintVertical_bias="1.0"
-                    app:strokeColor="#0573BB"
+                    app:strokeColor="@color/lb"
                     app:strokeWidth="50dp" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
