--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,12 +16,13 @@
         <!-- Profile Image Circle -->
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/baseline_account_circle_24"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:scaleType="centerCrop"
+            android:focusable="true" />
 
         <!-- Username -->
         <TextView
